setup variables and choose random number with javascript

--- a/index.html
+++ b/index.html
@@ -23,25 +23,28 @@
     </div>
 
     <div>
-        <section></section>
+        <section id="randomNumber"></section>
         <section>
-            <p>Wins: </p>
+            <p id="wins">Wins: </p>
             
-            <p>Loses: </p>
+            <p id="losses">Losses: </p>
         </section>
     </div>
 
     <div>
-        <img src="assets/images/pink-crystal.jpg" alt="pink crystal">
-        <img src="assets/images/orange-crystal.jpg" alt="orange crystal">
-        <img src="assets/images/blue-crystal.jpg" alt="blue crystal">
-        <img src="assets/images/purple-crystal.jpg" alt="purple crystal">
+        <img id="pink" src="assets/images/pink-crystal.jpg" alt="pink crystal">
+        <img id="orange" src="assets/images/orange-crystal.jpg" alt="orange crystal">
+        <img id="blue" src="assets/images/blue-crystal.jpg" alt="blue crystal">
+        <img id="purple" src="assets/images/purple-crystal.jpg" alt="purple crystal">
     </div>
 
     <div>
         <p>Your total score is:</p>
-        <p></p>
+        <p id="totalScore"></p>
     </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="assets/javascript/game.js"></script>
     
 </body>
 </html>
