--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <div>
         <section id="randomNumber"></section>
         <section>
+            <p id="result"></p>
             <p id="wins">Wins: </p>
             
             <p id="losses">Losses: </p>
